Deployment from Codesandbox.

--- a/index.html
+++ b/index.html
@@ -206,5 +206,35 @@
     <div aria-label="aria Text Here for Screen Readers">
       <p>My Descriptive Paragraph Text Housed in another Div that has a</p>
     </div>
+
+    <div class="text-center">
+      <div class="icons" role="button">
+        <span
+          class="cdrate-icon"
+          data-toggle="modal"
+          tabindex="0"
+          data-target="#myModal3"
+          aria-label="open modal to show cd rate"
+        >
+          <i class="fa fa-bar-chart fa-3x fa-fw" aria-hidden="true"></i>
+        </span>
+        <!--<h2 class="clientsheader">Great CD Rate</h2> -->
+        <p>Great CD Rate</p>
+      </div>
+    </div>
+
+    <div class="carousel-caption">
+      <h2>
+        <i>Zelle</i><sup>®</sup> <span><br />Fast, Secure, No Fee</span
+        ><br />The Excellent Money App<br />
+        <a
+          href="./Zelle/index.html"
+          aria-label="Start Zelle"
+          class="btn-start"
+          role="button"
+          >Get Started</a
+        >
+      </h2>
+    </div>
   </body>
 </html>
